--- a/requirements.txt
+++ b/requirements.txt
@@ -258,7 +258,7 @@ promise==2.3
 prompt_toolkit==3.0.50
 propcache==0.2.1
 proto-plus==1.26.0
-# protobuf==3.20.3
+protobuf==3.20.3
 psutil==5.9.3
 ptyprocess==0.7.0
 pure_eval==0.2.3
