--- a/requirements.txt
+++ b/requirements.txt
@@ -216,7 +216,7 @@ nest-asyncio==1.6.0
 networkx==3.4.2
 notebook==6.5.7
 notebook_shim==0.2.4
-numba==0.58.1
+#numba==0.58.1
 numpy==1.24.4
 oauth2client==4.1.3
 oauthlib==3.2.2
