--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 streamlit==1.36.0
 opencv-python==4.9.0.80
 numpy==1.26.4
-mediapipe==0.10.21
-tensorflow==2.15.0
+mediapipe>=0.10.13
+tensorflow>=2.16.0
 pandas==2.2.2
 scipy==1.13.0
-protobuf==3.20.3  # Important: newer models may require this version
+protobuf>=4.25.3,<5
 streamlit-TTS==1.2.0
 gtts==2.5.3
 uuid==1.30
