--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 streamlit==1.36.0
-opencv-contrib-python==4.11.0.86
+opencv-python
+opencv-contrib-python
 numpy==1.26.4
 mediapipe>=0.10.13
 tensorflow>=2.16.0
