--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 streamlit==1.36.0
-opencv-python
-opencv-contrib-python
+opencv-python-headless==4.9.0.80
 numpy==1.26.4
-mediapipe>=0.10.13
+mediapipe>=0.10.21
 tensorflow>=2.16.0
 pandas==2.2.2
 scipy==1.13.0
