--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-streamlit==1.36.0
-opencv-python-headless==4.9.0.80
+streamlit==1.44.1
+opencv-python==4.11.0.86
 numpy==1.26.4
-mediapipe>=0.10.13
-tensorflow>=2.16.0
-pandas==2.2.2
-protobuf>=4.25.3,<5
-scipy==1.13.0
-streamlit-TTS==0.0.7
-gtts==2.5.3
+mediapipe==0.10.21
+tensorflow==2.19.0
+pandas==2.2.3
+protobuf==4.25.7
+scipy==1.15.2
+joblib==1.5.0
+gTTS==2.5.4
+streamlit_TTS==0.0.7
 uuid==1.30
-python-dotenv
+python-dotenv==1.1.0
